[package]
name = "differential-evolution"
version = "0.2.0"
authors = ["Martin Ankerl <martin.ankerl@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinus/differential-evolution-rs"
homepage = "https://docs.rs/differential-evolution/*/differential_evolution/"
description = """
Differential evolution optimizer for rust. 
"""
keywords = ["evolution", "optimization", "genetic", "DE"]

[dependencies]
rand = "0.3"