[package]
name = "differential-evolution"
version = "0.2.2"
authors = ["Martin Ankerl <martin.ankerl@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/martinus/differential-evolution-rs"
documentation = "https://docs.rs/differential-evolution/0.2.2/differential_evolution/"

description = """
Simple and powerful global optimization using a self-adapting differential evolution.
"""
keywords = ["evolution", "optimization", "genetic", "DE"]

[dependencies]
rand = "0.3"